# linenoise

./: .gitignore  CMakeLists.txt  README.markdown  buffer.c  buffer.h  config.h.in  linenoise.c  linenoise.h  linenoise_hints.c  linenoise_hints.h  linenoise_key_binding.c  linenoise_private.h
include/: linenoise.h
